# neuron-game

./: .gitignore  README.md  pyproject.toml
neuron_game/: controller.py  display.py  game.py  iaf_cond_alpha.py
